Optimize menu box generation

--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
       <h3><a href="#" data-action="...">Nowa gra</a></h3>
       <h3><a href="#" data-action="...">Ranking</a></h3>
       <h3><a href="#" data-action="...">Opcje</a></h3>
+      <h3><a href="#" data-action="...">O grze</a></h3>
     </div>
   </div>
 <script src="static/js/jquery-3.6.0.min.js"></script>
