Audio loop music

--- a/main.html
+++ b/main.html
@@ -42,6 +42,10 @@
       if(!musicPlaying){
         let audio = new Audio('static/sound/main-ost.mp3');
         audio.play();
+        audio.addEventListener('ended', function() {
+            this.currentTime = 0;
+            this.play();
+        }, false);
         musicPlaying = true;
       }
     })
