Demo preview of phase frontend

--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
     <meta name="keywords" content="Buklaki The Game">
     <meta name="author" content="Kropka">
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/custom/custom.css" rel="stylesheet">
+    <link href="static/custom/global.css" rel="stylesheet">
+    <link href="static/custom/menu.css" rel="stylesheet">
 </head>
 <body>
   <div id="main-div">
@@ -58,6 +59,7 @@
 
   $(document).ready((e) => {
     console.log('BuklakiTheGame v0.001 initialized correctly!');
+    console.log('CURRENT STAGE: MENU');
     let getBody = $('body')
     const ARROW_SPAN = '<span class="arrows"></span>';
 
