--- a/game.html
+++ b/game.html
@@ -9,21 +9,34 @@
     <meta name="keywords" content="Buklaki The Game">
     <meta name="author" content="Kropka">
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/custom/custom.css" rel="stylesheet">
+    <link href="static/custom/global.css" rel="stylesheet">
+    <link href="static/custom/game.css" rel="stylesheet">
 </head>
 <body>
   <div id="main-div">
-    <div id="menu">
-      <h1>Buklaki The Game</h1>
-      <h3><a href="#" data-action="new-game">Nowa gra</a></h3>
-      <h3><a href="#" data-action="ranking">Ranking</a></h3>
-      <h3><a href="#" data-action="settings">Opcje</a></h3>
-      <h3><a href="#" data-action="about">O grze</a></h3>
-    </div>
-    <div id="options">
-      <h3><a href="#" data-action="music">Muzyka</a></h3>
-      <h3><a href="#" data-action="sound">Dzwiek z gry</a></h3>
+    <div id="status" class="menu">
+      <span class="text-start">OAZA</span>
+      <span id="phases" class="text-center"></span>
+      <span class="text-end">CEL</span>
     </div>
   </div>
 <script src="static/js/jquery-3.6.0.min.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
+<script>
+  const PHASE_SPAN = '<div class="phase"></div>';
+
+  let generateSpans = (number) => {
+    $('.phase').remove();
+    for(let step=0; step<number; step++){
+      $('#phases').append($(PHASE_SPAN).attr('data-step', step))
+    }
+  }
+
+  $(document).ready(() => {
+    console.log('BuklakiTheGame v0.001 initialized correctly!');
+    console.log('CURRENT STAGE: GAME');
+    generateSpans(7);
+  })
+</script>
+</body>
+</html>
