--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
 
   let generateSpans = (number) => {
     $('.phase').remove();
-    for(let step=0; step<number; step++){
+    for(let step=1; step<=number; step++){
       $('#phases').append($(PHASE_SPAN).attr('data-step', step).text(step))
     }
   }
