--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <meta name="description" content="BuklakiTheGame - gra na projekt zespolowy UWM.">
     <meta name="keywords" content="Buklaki The Game">
     <meta name="author" content="Kropka">
+    <link rel="shortcut icon" href="#">
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/custom/global.css" rel="stylesheet">
     <link href="static/custom/game.css" rel="stylesheet">
@@ -23,15 +24,9 @@
   </div>
 <script src="static/js/jquery-3.6.0.min.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
+<script src="static/custom/global-utils.js"></script>
 <script>
   const PHASE_SPAN = '<div class="phase"></div>';
-  let KEY_CONFIG = {
-    'UP': [38, 87],
-    'DOWN': [40, 83],
-    'LEFT': [37, 65],
-    'RIGHT': [39, 68],
-    'ENTER': [13],
-  }
 
   let generateSpans = (number) => {
     $('.phase').remove();
@@ -41,8 +36,8 @@
   }
 
   $(document).ready(() => {
-    console.log('BuklakiTheGame v0.001 initialized correctly!');
-    console.log('CURRENT STAGE: GAME');
+    LOGGER.success('BuklakiTheGame v0.001 initialized correctly!');
+    LOGGER.info('CURRENT STAGE: GAME');
     generateSpans(7);
 
     let musicPlaying = false;
@@ -57,6 +52,10 @@
         }, false);
         musicPlaying = true;
       }
+
+      getBody.keydown((e) => {
+        console.log(e.keyCode);
+      });
     });
   })
 </script>
