--- a/game.html
+++ b/game.html
@@ -23,9 +23,9 @@
     </div>
     <div id="pause" class="menu">
       <h1>Pauza</h1>
-      <h3><a href="#" data-action="play-game" data-arrows="no">Wróć do gry</a></h3>
+      <h3><a href="#" data-action="play-game">Wróć do gry</a></h3>
       <h3>
-        <span><a href="#" data-action="back-to-menu" data-arrows="no">Przejdź do menu</a></span>
+        <span><a href="#" data-action="back-to-menu">Przejdź do menu</a></span>
         <div class="warning-sign">UWAGA! Utrata postępu.</div>
        </h3>
     </div>
