Add working translation system

--- a/game.html
+++ b/game.html
@@ -17,9 +17,9 @@
   <div id="main-div">
     <div id="bucket-amount"><span>0</span></div>
     <div id="status" class="menu curr-menu">
-      <span class="text-start">OAZA</span>
+      <span class="text-start">Oaza</span>
       <div id="phases" class="text-center"></div>
-      <span class="text-end">CEL</span>
+      <span class="text-end">Cel</span>
     </div>
     <div id="pause" class="menu">
       <h1>Pauza</h1>
@@ -30,9 +30,11 @@
        </h3>
     </div>
   </div>
-<script src="static/js/jquery-3.6.0.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
-<script src="static/custom/global-utils.js"></script>
+  <script src="static/js/jquery-3.6.0.min.js"></script>
+  <script src="static/js/js.cookie.min.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/custom/global-utils.js"></script>
+  <script src="static/custom/trans-handler.js"></script>
 <script>
   const PHASE_SPAN = '<div class="phase"></div>';
 
