--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
     <div id="menu" class="menu curr-menu">
       <h1>Buklaki The Game</h1>
       <h3><a href="#" data-action="new-game">Nowa gra</a></h3>
+      <h3><a href="#" data-action="about">Instrukcja</a></h3>
       <h3><a href="#" data-action="settings">Opcje</a></h3>
       <h3><a href="#" data-action="ranking">Ranking</a></h3>
       <h3><a href="#" data-action="about">O grze</a></h3>
